--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <nav class="navbar">
       <div class="logo">Esteban</div>
       <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#" class="btn-resume">Resume</a></li>
+        <li><a href="#about">Sobre Mí</a></li>
+        <li><a href="#projects">Proyectos</a></li>
+        <li><a href="#skills">Habilidades</a></li>
+        <li><a href="#contact">Contacto</a></li>
+        <li><a href="#" class="btn-resume">Inicio</a></li>
       </ul>
     </nav>
   </header>
@@ -29,40 +29,40 @@
         <img src="assets/avatar.svg" alt="Ilustración de Esteban" />
       </div>
       <div class="hero-content">
-        <h1>Hi, I'm Esteban, a <br><span>Software Developer</span></h1>
-        <p>I'm a passionate software developer with a focus on creating innovative and user-friendly applications. I enjoy working on challenging projects and collaborating with teams to build impactful solutions.</p>
-        <a href="#projects" class="btn-primary">View Projects</a>
+        <h1>Hola, soy Esteban, un <br><span>Desarrollador de Software</span></h1>
+        <p>Soy un desarrollador de software apasionado con enfoque en crear aplicaciones innovadoras y fáciles de usar. Disfruto trabajando en proyectos desafiantes y colaborando con equipos para construir soluciones impactantes.</p>
+        <a href="#projects" class="btn-primary">Ver Proyectos</a>
       </div>
     </section>
 
     <section id="about" class="about">
-      <h2>About Me</h2>
-      <p>I'm a software developer with a strong foundation in computer science principles and a passion for creating innovative solutions. I'm proficient in various programming languages and frameworks, and I'm always eager to learn new technologies and expand my skill set. I'm a collaborative team player with excellent communication skills, and I'm committed to delivering high-quality work that meets the needs of users and stakeholders.</p>
+      <h2>Sobre Mí</h2>
+      <p>Estudiante de Análisis y Desarrollo de Software en el SENA, con enfoque en desarrollo web. Complementé mi formación con un bootcamp intensivo de programación en Talentotech (2024), donde profundicé en Python. Me considero una persona autodidacta, curiosa y comprometida con el aprendizaje constante. Manejo tecnologías como HTML, CSS, JavaScript y Python. Actualmente estoy en búsqueda de una oportunidad para realizar mi etapa práctica y aplicar mis conocimientos en un entorno real de desarrollo.</p>
     </section>
 
     <section id="projects" class="projects">
-      <h2>Projects</h2>
+      <h2>Proyectos</h2>
       <div class="project-list">
         <div class="project-card">
-          <img src="assets/project1.png" alt="E-commerce Website" />
-          <h3>Project 1: E-commerce Website</h3>
-          <p>Developed a full-featured e-commerce website with user authentication, product catalog, shopping cart, and payment gateway integration.</p>
+          <img src="assets/project1.png" alt="Sitio Web de Inventario" />
+          <h3>Sistema de Gestión de Inventario para Taller de Ornamentación – Flask</h3>
+          <p>Desarrollo de una aplicación web para gestionar materiales en un taller de ornamentación. El sistema permite registrar entradas y salidas de inventario, controlar stock, emitir reportes y visualizar alertas por bajo inventario. Implementado con Flask, SQLite y SQLAlchemy siguiendo el patrón MVC. Incluye autenticación de usuarios, control de roles (administrador y operador) y gráficos estadísticos con Chart.js.</p>
         </div>
         <div class="project-card">
-          <img src="assets/project2.png" alt="Mobile App for Fitness Tracking" />
-          <h3>Project 2: Mobile App for Fitness Tracking</h3>
-          <p>Created a mobile app for fitness tracking with features like activity logging, goal setting, and progress visualization.</p>
+          <img src="assets/project2.png" alt="Aplicación Móvil para Seguimiento de Ejercicios" />
+          <h3>Proyecto 2: Aplicación Móvil para Seguimiento de Ejercicios</h3>
+          <p>Creé una aplicación móvil para seguimiento de ejercicios con funciones como registro de actividades, establecimiento de metas y visualización de progreso.</p>
         </div>
         <div class="project-card">
-          <img src="assets/project3.png" alt="Data Analysis Dashboard" />
-          <h3>Project 3: Data Analysis Dashboard</h3>
-          <p>Designed and implemented a data analysis dashboard to visualize key metrics and trends from a large dataset.</p>
+          <img src="assets/project3.png" alt="Panel de Análisis de Datos" />
+          <h3>Proyecto 3: Panel de Análisis de Datos</h3>
+          <p>Diseñé e implementé un panel de análisis de datos para visualizar métricas clave y tendencias de un conjunto grande de datos.</p>
         </div>
       </div>
     </section>
 
     <section id="skills" class="skills">
-      <h2>Skills</h2>
+      <h2>Habilidades</h2>
       <div class="skills-list">
         <span>Python</span>
         <span>JavaScript</span>
@@ -74,15 +74,15 @@
     </section>
 
     <section id="contact" class="contact">
-      <h2>Contact</h2>
+      <h2>Contacto</h2>
       <form id="contact-form">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Name" required>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
-        <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn-primary">Send</button>
+        <label for="name">Nombre</label>
+        <input type="text" id="name" name="name" placeholder="Tu Nombre" required>
+        <label for="email">Correo Electrónico</label>
+        <input type="email" id="email" name="email" placeholder="Tu Correo Electrónico" required>
+        <label for="message">Mensaje</label>
+        <textarea id="message" name="message" placeholder="Tu Mensaje" required></textarea>
+        <button type="submit" class="btn-primary">Enviar</button>
       </form>
     </section>
   </main>
@@ -90,9 +90,9 @@
   <footer>
     <div class="footer-social">
       <a href="#" aria-label="LinkedIn"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
-      <a href="#" aria-label="GitHub"><img src="assets/github.svg" alt="GitHub"></a>
+      <a href="https://github.com/xEstebaan" aria-label="GitHub"><img src="assets/github-mark.svg" alt="GitHub"></a>
     </div>
-    <p>© 2025 Esteban. All rights reserved.</p>
+    <p>© 2025 Esteban. Todos los derechos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
