--- a/index.html
+++ b/index.html
@@ -54,17 +54,7 @@
           <h3 data-i18n="projects.1.title">Sistema de Gestión de Inventario para Taller de Ornamentación – Flask</h3>
           <p data-i18n="projects.1.desc">Desarrollo de una aplicación web para gestionar materiales en un taller de ornamentación. El sistema permite registrar entradas y salidas de inventario, controlar stock, emitir reportes y visualizar alertas por bajo inventario. Implementado con Flask, SQLite y SQLAlchemy siguiendo el patrón MVC. Incluye autenticación de usuarios, control de roles (administrador y operador) y gráficos estadísticos con Chart.js.</p>
         </div>
-        <div class="project-card">
-          <img src="assets/project2.png" alt="Aplicación Móvil para Seguimiento de Ejercicios" />
-          <h3 data-i18n="projects.2.title">Proyecto 2: Aplicación Móvil para Seguimiento de Ejercicios</h3>
-          <p data-i18n="projects.2.desc">Creé una aplicación móvil para seguimiento de ejercicios con funciones como registro de actividades, establecimiento de metas y visualización de progreso.</p>
-        </div>
-        <div class="project-card">
-          <img src="assets/project3.png" alt="Panel de Análisis de Datos" />
-          <h3 data-i18n="projects.3.title">Proyecto 3: Panel de Análisis de Datos</h3>
-          <p data-i18n="projects.3.desc">Diseñé e implementé un panel de análisis de datos para visualizar métricas clave y tendencias de un conjunto grande de datos.</p>
-        </div>
-      </div>
+
     </section>
 
     <section id="skills" class="skills">
@@ -80,16 +70,13 @@
     </section>
 
     <section id="contact" class="contact">
-      <h2 data-i18n="contact.title">Contacto</h2>
-      <form id="contact-form">
-        <label for="name" data-i18n="contact.name">Nombre</label>
-        <input type="text" id="name" name="name" placeholder="Tu Nombre" required data-i18n-placeholder="contact.name.placeholder">
-        <label for="email" data-i18n="contact.email">Correo Electrónico</label>
-        <input type="email" id="email" name="email" placeholder="Tu Correo Electrónico" required data-i18n-placeholder="contact.email.placeholder">
-        <label for="message" data-i18n="contact.message">Mensaje</label>
-        <textarea id="message" name="message" placeholder="Tu Mensaje" required data-i18n-placeholder="contact.message.placeholder"></textarea>
-        <button type="submit" class="btn-primary" data-i18n="contact.send">Enviar</button>
-      </form>
+      <h2 data-i18n="contact.title2">¿Hablamos?</h2>
+      <p data-i18n="contact.desc2">Si tienes alguna pregunta o quieres colaborar en un proyecto, no dudes en ponerte en contacto conmigo. Estoy abierto a nuevas oportunidades y desafíos.</p>
+      <div class="contact-buttons">
+        <a href="mailto:julibrnal@gmail.com" class="btn-contact" data-i18n="contact.email2">Correo electrónico</a>
+        <a href="https://wa.me/3218396984" class="btn-contact" data-i18n="contact.whatsapp">WhatsApp</a>
+        <a href="https://www.linkedin.com/in/tuusuario" class="btn-contact" data-i18n="contact.linkedin">LinkedIn</a>
+      </div>
     </section>
   </main>
 
