Actualizacion de links

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
       <div class="contact-buttons">
         <a href="mailto:julibrnal@gmail.com" class="btn-contact" data-i18n="contact.email2">Correo electrónico</a>
         <a href="https://wa.me/3218396984" class="btn-contact" data-i18n="contact.whatsapp">WhatsApp</a>
-        <a href="https://www.linkedin.com/in/tuusuario" class="btn-contact" data-i18n="contact.linkedin">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/esteban-im-4674b336a" class="btn-contact" data-i18n="contact.linkedin">LinkedIn</a>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="footer-social">
-      <a href="#" aria-label="LinkedIn"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
+      <a href="https://www.linkedin.com/in/esteban-im-4674b336a/" aria-label="LinkedIn"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
       <a href="https://github.com/xEstebaan" aria-label="GitHub"><img src="assets/github-mark.svg" alt="GitHub"></a>
     </div>
     <p>© 2025 Esteban. Todos los derechos reservados.</p>
